Added a new profile (standalone) that allows to start the editor running on an H2 database for demonstration purpose.